<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/open_navigation"
                    android:layout_width="30dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@android:drawable/ic_menu_sort_by_size"
                    android:fitsSystemWindows="true" />


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/meteocaster_logo" />


                <ImageView
                    android:id="@+id/searchview"
                    android:layout_width="30dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/srch">

                </ImageView>

            </RelativeLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <RelativeLayout
                        android:id="@+id/imageHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <RelativeLayout
                            android:id="@+id/status_holder"
                            android:layout_width="match_parent"
                            android:layout_height="500dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/day_background"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/pathankot_in"
                                android:textColor="@color/light_blue"
                                android:textSize="27sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:id="@+id/dataFeed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/location"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/todayTemperature"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_0_c"
                                    android:textColor="@color/light_blue"
                                    android:textSize="45sp"/>

                                <TextView
                                    android:id="@+id/todayDescription"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/no_data"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todayWind"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/wind_0_m_s"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todayPressure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pressure_0_hpa"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todayHumidity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/humidity_0"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todaySunrise"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sunrise_00_00"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todaySunset"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sunset_00_00"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/todayUvIndex"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/uv_index_loading"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>

                            <ImageView
                                android:id="@+id/climateImage"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_below="@id/location"
                                android:layout_marginStart="50dp"
                                android:layout_marginTop="50dp"
                                android:layout_toEndOf="@id/dataFeed"
                                android:contentDescription="@string/logo"
                                android:scaleType="centerCrop"
                                android:src="@drawable/sun" />


                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/house"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="260dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/logo"
                            android:scaleType="fitCenter"
                            android:src="@drawable/day_landscape"/>

                    </RelativeLayout>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/hourly"
                        android:textColor="@color/dark_orange"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hour_climate_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/day_weather_report"
                        android:textColor="@color/dark_orange"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_climate_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>




        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/navigation_bar"
        android:background="#0000"
        app:menu="@menu/sider"/>
</androidx.drawerlayout.widget.DrawerLayout>