<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="61dp"
            android:background="@drawable/deletepopupbackground" >

        </RelativeLayout>

        <ImageView
            android:id="@+id/profile_edit_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/location" />

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_edit_image"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/light_black"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/updatehint"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:textColor="@color/light_brown"
            android:textColorHint="@color/light_brown"
            android:textSize="24sp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/location"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/loading1" />


        <Button
            android:id="@+id/search_location"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/deletebutton"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/minimize"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cancel" />


    </RelativeLayout>
</RelativeLayout>